button icon clipped fix

--- a/src/app/components/tx-module/shared/pool-preview/pool-preview.component.scss
+++ b/src/app/components/tx-module/shared/pool-preview/pool-preview.component.scss
@@ -58,14 +58,6 @@
         display: flex;
         align-items: center;
       }
-
-      mat-icon {
-        width: 16px;
-        height: 16px;
-        line-height: 16px;
-        font-size: 16px;
-        margin-left: 8px;
-      }
     }
   }
 }
